add swagger for add IAE, route ok
